<resources>
    <string name="general_yes">Yes</string>
    <string name="general_no">No</string>
    <string name="app_name">Quiz</string>
    <string name="card_image">Card image</string>
    <string name="confirm">Confirm</string>
    <string name="game_over">Game Over!</string>
    <string name="score">Score: %1$d</string>
    <string name="finishTime">Time : %1$d seconds</string>
    <string name="quiz_game">Quiz Game</string>
    <string name="play">Play</string>
    <string name="play_again">Play Again</string>
    <string name="main_menu">Main menu</string>
    <string name="question_image">Question Image</string>
    <string name="correct">Correct!</string>
    <string name="incorrect">Incorrect!</string>
    <string name="questions">Questions: %1$d</string>
    <string name="difficulty">Difficulty: %1$s</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_normal">Normal</string>
    <string name="difficulty_hard">Hard</string>
    <string name="create_user">Create User</string>
    <string name="edit_user">Edit User</string>
    <string name="delete_user">Delete User</string>
    <string name="create_user_name">Name:</string>
    <string name="create_user_camera">Open camera</string>
    <string name="delete_user_confirm_title">Delete user?</string>
    <string name="delete_user_confirm_message">The user \'%1$s\' will be lost forever! (A long time!)</string>
    <string name="ranking_best_score">Best score: %1$d (%2$ds)</string>
    <string name="ranking_matches">Games played: %1$d</string>
    <string name="ranking_last_played">%1$s</string>
    <string name="guest">Guest</string>
</resources>